Get Table CVS implemented at downloadCSV.php?p=tableName

--- a/show/index.html
+++ b/show/index.html
@@ -1,4 +1,5 @@
 <ul>
+	<li><a href="downloadCSV.php">Get Table CVS</a></li>
 	<li><a href="Qs.php">Qs</a></li>
 	<li><a href="S4RevisionsAll.php">S4Revisions</a></li>
 	<li><a href="S6Rankings.php">S6Rankings</a></li>
