show S6 ranking options(/show/S6RankingPagesLX.php?p=Y, CrwIns time in mtkCrwdRevision, Options stored in orgSentence [SID,Sentence,SMean,SStDev,SCoeVar,dateT,flag]

--- a/show/index.html
+++ b/show/index.html
@@ -19,4 +19,7 @@
 	<li><a href="rComment.php">rComment</a></li>
 	<li><a href="Reviewer.php">Reviewer</a></li>
 	<li><a href="ReviewerIds.php">ReviewerIds</a></li>
+	<li><a href="S6RankingPagesL2.php?p=1">S6 L2 Ranking Opt</a></li>
+	<li><a href="S6RankingPagesL3.php?p=1">S6 L3 Ranking Opt</a></li>
+	<li><a href="S6RankingPagesL4.php?p=1">S6 L4 Ranking Opt</a></li>
 </ul>
